0.2.5: 2001/
---------------------
1. Fix bug in bims.c: et26: t+space.
   Thansk to Huang, Jiun-Jeng <jouston@housediy.com>.
   

0.2.4: 2001/10/19
---------------------
1. Complete the ZhuYin filling project of tsi.src.

2. Update libtool to version 1.4 (1.920 2001/04/24 23:26:18).
   Use -rpath to replace $extra_link_flag in configure.in.
   Configure options changed:
	--enable-merge-db
	--with-db-inc=PATH
	--with-db-lib=PATH
	--with-db-bin=PATH

3. Remove tabe_zhi2yin.h. libtabe API changed:
	Remove struct ZhiInfo. Use struct TsiInfo to replace it.
	Change tabeZhiInfoLookupYin() to tabeTsiInfoLookupZhiYin().
	Change API: tabeTsiInfoLookupPossibleTsiYin().
   Modify bims.c, tsiadd.c, tsiyindump.c, tsiyincheck.c for the API change.

4. Change libbims API:
	Add bimstabeZhiToYin().
	Add type: DB_pool, to hold the db files for each application.

5. Fix the bugs which might hurt the consistancy:
	bimsDBPoolDelete() should also check the primary tdb, ydb.
	tabeTsiDBClose() should free tsidb also.
	tabeTsiYinDBClose() should free tsiyindb also.

6. libtabe multiple accessment to the same db file support:
	Add flag: DB_FLAG_SHARED, to enable db file shared support.
	All tabeTsiDBOpen() & tabeTsiYinDBOpen() in libbims use DB_FLAG_SHARED.

7. Change libtabe API:
	struct TsiDB, TsiYinDB: add set_range support for CursorSet.
	Add flag: DB_FLAG_NOUNPACK_YIN, only effective for struct TsiDB.

8. Change "which" to "mywhich" in tsipackdb.in for NetBSD compatibility.
	Thanks to Rui-Xiang Guo <rxg@ms25.url.com.tw>


0.2.3: 2001/08/20
---------------------
1. Fix compilation warnings in HP-UX in tabe_chu.c

2. Update: config.sub, config.guess, ltconfig, and ltmain.sh to support
   Mac OSX (Thanks to <pshsiao@tcts.seed.net.tw>)

3. Add "db_dump" and "db_load" instructions to pack yin.db.
   Thanks to the reminder Kuang-che Wu <kcwu@ck.tp.edu.tw>.

4. Fix bug of Tab break phrase in bims.c.
   Thanks to Kuang-che Wu <kcwu@ck.tp.edu.tw>.
