@@ -2,6 +2,10 @@
 ---------------------
 1. Fix bug in bims.c: et26: t+space.
    Thansk to Huang, Jiun-Jeng <jouston@housediy.com>.
+
+2. Fix bug in tabe_tsidbint.c & tabe_tsiyindbint.c when open db file failed.
+   Turn off the writing mode of bims when opening the db files.
+   Thanks to Kuang-che Wu <kcwu@ck.tp.edu.tw>.
    
 
 0.2.4: 2001/10/19
